--- a/public/mobile/slide.html
+++ b/public/mobile/slide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>timeaxis</title>
+    <title>slide</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
@@ -12,7 +12,7 @@
     <meta content="no-cache" http-equiv="cache-control">
     <meta content="0" http-equiv="expires">
     <meta name="applicable-device" content="mobile">
-    <link rel="stylesheet" href="css/app/timeaxis.css">
+    <link rel="stylesheet" href="css/app/slide.css">
     <script src="js/require.js" data-main="js/app.js"></script>
     <style>
         body {
@@ -22,11 +22,9 @@
     </style>
 </head>
 <body>
-    <div class="timeaxis" style="height:78px;"></div>
-    <div class="tools">
-        <p id="goto">跳转到15:00秒杀</p>
-        <p id="start">设置14:00秒杀开始</p>
+    <div class="slide-box">
+
     </div>
-    <div class="log" style="border:1px solid pink;"></div>
+    <div class="log"></div>
 </body>
 </html>
